# interprocess_comm_message_queue

./: CMakeLists.txt  Makefile  README.md  main.cpp  message.hpp  mq_manager.cpp  mq_manager.hpp  sonar-project.properties
.github/workflows/: build.yml
src/: main.cpp
